Add new implementations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <script src="libs/d3/d3.min.js" charset="utf-8"></script>
   </head>
   <body>
-    <div id="voronoi"></div>
+    <div id="voronoi-01"></div>
+    <div id="voronoi-02"></div>
+    <div id="voronoi-03"></div>
+    <div id="voronoi-04"></div>
   </body>
   <script src="javascripts/voronoi.js"></script>
 </html>
